open시 sub-menu css속성 초기화하기

--- a/Jungle-Academy/portfolio2/css/text.css
+++ b/Jungle-Academy/portfolio2/css/text.css
@@ -164,20 +164,25 @@ header.main-header[open] nav.tnb a {
 }
 
 header.main-header[open] nav.gnb ul.gnb-menu li.menu-item a {
-  color: #333333;
+  color: #110c0c;
   font-weight: bold;
 }
 
 header.main-header[open] nav.gnb ul.gnb-menu li.menu-item ul.sub-menu {
-  height: 100%;
+  background-color: transparent;
   padding: 15px 30px;
+  height: auto;
   margin-left: 30px;
   white-space: nowrap;
+  -webkit-transition: height .4s , background-color .000001s;
+  transition: height .4s , background-color .000001s;
 }
 
 header.main-header[open] nav.gnb ul.gnb-menu li.menu-item ul.sub-menu li {
   display: block;
   height: 45px;
+  -webkit-transition: height .4s;
+  transition: height .4s;
 }
 
 header.main-header[open] nav.gnb ul.gnb-menu li.menu-item ul.sub-menu li a {
