--- a/Jungle-Academy/portfolio2/css/text.scss
+++ b/Jungle-Academy/portfolio2/css/text.scss
@@ -161,21 +161,24 @@ header.main-header {
       ul.gnb-menu {
         li.menu-item {
           
-          
           a{
-            color: #333333;
+            color: #110c0c;
             font-weight: bold;
           }
 
           ul.sub-menu {
-            height: 100%;
+            //css속성 초기화하기
+            background-color: transparent;
             padding: 15px 30px;
+            height: auto;
             margin-left: 30px;
             white-space: nowrap;
+            transition: height .4s , background-color .000001s;
             
             li {
               display: block;
               height: 45px;
+              transition: height .4s;
               // padding: 16px;
 
               a{
