--- a/study/20190424/css/0424-01.css
+++ b/study/20190424/css/0424-01.css
@@ -199,6 +199,10 @@ section > div > article {
 }
 
 section > div > article strong {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
   display: block;
   position: absolute;
   top: 50%;
@@ -310,6 +314,7 @@ section .box1 > article:nth-child(8) {
 
 section .box1 > article:nth-child(8) video {
   width: 100%;
+  height: 100%;
 }
 
 section .box1 > article:nth-child(9) {
