--- a/study/20190424/css/0424-01.scss
+++ b/study/20190424/css/0424-01.scss
@@ -152,6 +152,7 @@ section {
       background-position: center;
 
       strong {
+        user-select: none;
         display:block;
         position: absolute;
         top: 50%;
@@ -259,8 +260,8 @@ section {
         overflow: hidden;
 
         video {
-          width: 100%
-
+          width: 100%;
+          height: 100%;
         }
       }
       &:nth-child(9){
