--- a/Jungle-Academy/portfolio2/css/ware-valley.css
+++ b/Jungle-Academy/portfolio2/css/ware-valley.css
@@ -34,17 +34,18 @@ body {
   font: 15px/1.6 'Noto Sans KR';
 }
 
-div.hero {
-  background: url(../img/main_img2.png) no-repeat center/cover;
+div.top-hero {
+  display: none;
+  background: url(../img/main_img2.png) no-repeat center top;
   width: 100%;
   height: 840px;
   -webkit-transition: all .4s;
   transition: all .4s;
 }
 
-div.hero h1 {
+div.top-hero h1 {
   position: absolute;
-  top: calc(50% + 30px);
+  top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
@@ -61,7 +62,7 @@ div.hero h1 {
   transition: all .4s;
 }
 
-div.hero h1 span {
+div.top-hero h1 span {
   display: block;
   font-size: 30px;
   font-weight: lighter;
@@ -73,18 +74,111 @@ div.hero h1 span {
   transition: all .4s;
 }
 
+div.top-hero .hero-btn {
+  display: block;
+  position: absolute;
+  top: 65%;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  border: 1px solid #fff;
+  border-radius: 20px;
+  padding: 5px 40px;
+  color: #fff;
+  font-size: 16px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+
 @media all and (max-width: 768px) {
-  div.hero {
+  div.top-hero {
+    background-size: cover;
     height: 400px;
     position: relative;
   }
-  div.hero h1 {
-    top: calc(50% + 50px);
+  div.top-hero h1 {
+    top: 50%;
     font-size: 30px;
   }
-  div.hero h1 span {
+  div.top-hero h1 span {
     font-size: 20px;
     line-height: 2;
+  }
+  div.top-hero .hero-btn {
+    top: 82%;
+    right: auto;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    font-size: 12px;
+    padding: 9px 40px;
+  }
+}
+
+.top-hero.hero1 h1 {
+  top: calc(50% + 120px);
+}
+
+@media all and (max-width: 768px) {
+  .top-hero.hero1 h1 {
+    top: 50%;
+  }
+}
+
+.top-hero.hero2 {
+  background-image: url(../img/download/common/slide_visual02.jpg);
+}
+
+@media all and (max-width: 768px) {
+  .top-hero.hero2 h1 span {
+    font-size: 18px;
+  }
+}
+
+.top-hero.hero3 {
+  display: block;
+  background-image: url(../img/download/common/slide_visual03.jpg);
+}
+
+.top-hero.hero3 h1, .top-hero.hero3 .hero-btn {
+  left: auto;
+  -webkit-transform: none;
+          transform: none;
+}
+
+.top-hero.hero3 h1 {
+  top: 30%;
+  right: 150px;
+}
+
+.top-hero.hero3 h1 img {
+  width: 450px;
+}
+
+.top-hero.hero3 .hero-btn {
+  top: 70%;
+  right: 345px;
+}
+
+@media all and (max-width: 768px) {
+  .top-hero.hero3 h1 {
+    right: auto;
+    top: 45%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+  }
+  .top-hero.hero3 h1 span {
+    font-size: 18px;
+    line-height: 2;
+    opacity: 0.8;
+  }
+  .top-hero.hero3 .hero-btn {
+    top: 82%;
+    right: auto;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
   }
 }
 
@@ -421,7 +515,7 @@ section {
 h2 {
   font: bold 25px;
   text-align: center;
-  margin-bottom: 100px;
+  margin-bottom: 50px;
 }
 
 section#product article {
@@ -445,8 +539,16 @@ section#product article ul li {
   height: 100%;
 }
 
+section#product article ul li .image-wrap {
+  background: #f5f6f8 url(../img/download/common/icon_solutions1.png) center no-repeat/80px 80px;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  margin: 0 auto;
+}
+
 section#product article ul li h3 {
-  padding-top: 230px;
+  padding-top: 30px;
   font-size: 15px;
   color: #333333;
 }
@@ -479,24 +581,29 @@ section#product article ul li a:hover {
   color: #fff;
 }
 
-section#product article li.cyclone {
-  background: url(../img/ico1.png) center top no-repeat/200px 200px;
+section#product article li.chakra-max > .image-wrap {
+  background-image: url(../img/download/common/icon_solutions2.png);
 }
 
-section#product article li.chakra-max {
-  background: url(../img/ico2.png) center top no-repeat/200px 200px;
+section#product article li.galea > .image-wrap {
+  background-image: url(../img/download/common/icon_solutions3.png);
 }
 
-section#product article li.galea {
-  background: url(../img/ico3.png) center top no-repeat/200px 200px;
+section#product article li.trusted-orange > .image-wrap {
+  background-image: url(../img/download/common/icon_solutions4.png);
 }
 
-section#product article li.trusted-orange {
-  background: url(../img/ico4.png) center top no-repeat/200px 200px;
+section#product article li.orange > .image-wrap {
+  background-image: url(../img/download/common/icon_solutions5.png);
 }
 
-section#product article li.orange {
-  background: url(../img/ico5.png) center top no-repeat/200px 200px;
+section#product article li.petasql > .image-wrap {
+  background-image: url(../img/download/common/icon_solutions6.png);
+}
+
+section#product article li.lora > .image-wrap {
+  background-image: url(../img/download/common/icon_solutions7.png);
+  background-size: 100px auto;
 }
 
 @media all and (max-width: 768px) {
@@ -516,6 +623,9 @@ section#product article li.orange {
   section#product article ul li {
     width: 130px;
   }
+  section#product article ul li .image-wrap {
+    background-size: 130px 130px;
+  }
   section#product article ul li h3 {
     padding-top: 160px;
   }
@@ -524,9 +634,6 @@ section#product article li.orange {
   }
   section#product article ul li a {
     margin-top: 30px;
-  }
-  section#product article ul li.cyclone, section#product article ul li.chakra-max, section#product article ul li.galea, section#product article ul li.trusted-orange, section#product article ul li.orange {
-    background-size: 130px 130px;
   }
 }
 
@@ -557,9 +664,16 @@ section.board-list div ul.utill-wrap li {
   height: 180px;
   background-color: #9f9f9f;
   padding: 40px;
+  position: relative;
 }
 
-section.board-list div ul.utill-wrap li h3 {
+section.board-list div ul.utill-wrap li a {
+  display: inline-block;
+  width: 280px;
+  height: 100%;
+}
+
+section.board-list div ul.utill-wrap li a h3 {
   color: #fff;
   font-size: 18px;
   letter-spacing: 1.5px;
@@ -567,12 +681,20 @@ section.board-list div ul.utill-wrap li h3 {
   text-transform: capitalize;
 }
 
-section.board-list div ul.utill-wrap li p {
+section.board-list div ul.utill-wrap li a p {
   color: rgba(255, 255, 255, 0.8);
   font-size: 15px;
   letter-spacing: 0.5px;
   line-height: 1.5;
   padding-top: 10px;
+  height: 100%;
+}
+
+section.board-list div ul.utill-wrap li img {
+  position: absolute;
+  right: 40px;
+  vertical-align: top;
+  width: 100px;
 }
 
 @media all and (max-width: 768px) {
@@ -587,6 +709,9 @@ section.board-list div ul.utill-wrap li p {
     min-height: 100px;
     margin-bottom: 10px;
     padding: 15px 20px;
+  }
+  section.board-list div ul.utill-wrap li img {
+    background-size: 50px;
   }
   section.board-list div ul.utill-wrap li h3 {
     font-size: 15px;
@@ -612,13 +737,6 @@ section.board-list div div h3 {
   letter-spacing: 1.2px;
 }
 
-section.board-list div div h3:after {
-  margin-left: 10px;
-  content: '\f138';
-  font-family: 'Font Awesome 5 Free';
-  font-weight: 600;
-}
-
 section.board-list div div ul li {
   padding: 15px 0;
   border-bottom: 1px solid #dcdcdc;
@@ -637,9 +755,17 @@ section.board-list div div.orange-board {
   margin-left: 30px;
 }
 
+section.board-list div div.orange-board > h3 {
+  background: url(../img/download/icon/right-arrow.png) 160px center no-repeat/20px;
+}
+
 section.board-list div div.news {
   float: right;
   margin-right: 30px;
+}
+
+section.board-list div div.news > h3 {
+  background: url(../img/download/icon/right-arrow.png) 75px center no-repeat/20px;
 }
 
 @media all and (max-width: 768px) {
@@ -665,14 +791,14 @@ section.board-list div div.news {
   }
 }
 
-section.aboutus h2 {
+section.aboutus > h2 {
   margin-bottom: 0;
 }
 
-section.aboutus p {
+section.aboutus > p {
   font-size: 15px;
   color: #929292;
-  margin-bottom: 40px;
+  margin-bottom: 50px;
   text-align: center;
 }
 
@@ -698,6 +824,10 @@ section.aboutus div.hero div.innerBox {
 section.aboutus div.hero div.innerBox h3, section.aboutus div.hero div.innerBox p {
   color: rgba(255, 255, 255, 0.74);
   height: 100%;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 section.aboutus div.hero div.innerBox h3 {
@@ -717,12 +847,10 @@ section.aboutus div.hero div.innerBox h3 span {
 }
 
 section.aboutus div.hero div.innerBox p {
-  text-align: unset;
-  width: 520px;
-  font-size: 12px;
-  float: left;
+  display: inline-block;
+  font-size: 14px;
+  padding-left: 40px;
   padding-top: 40px;
-  padding-left: 45px;
 }
 
 @media all and (max-width: 768px) {
